# nyx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/Source/: CMakeLists.txt  main.cpp
Engine/: CMakeLists.txt
Engine/Shaders/: DebugLines.vert  DefaultShader.frag  DefaultShader.vert  Grid.frag  Grid.frag.spv  Grid.vert  Grid.vert.spv  OutlineComposite.frag  OutlineComposite.vert  Picking.frag  Picking.vert  SelectionMask.frag  SelectionMask.vert  Skybox.frag  Skybox.vert
Engine/Source/: CMakeLists.txt
Engine/Source/Editor/include/: AssetBrowserPanel.h  AssetDatabase.h  ComponentEditorRegistration.h  ComponentEditors.h  ComponentInspectorRegistry.h  ComponentTypeRegistration.h  ComponentTypeRegistry.h  DiffUtil.h  EditableObjectRegistrations.h  EditableObjectTraits.h  EditableTargetResolver.h  EditorAssetResolver.h  EditorLayer.h  EditorProperty.h  EditorTransactionContext.h  EditorTransactionSubscriber.h  EditorValue.h  InspectorDrawContext.h  InspectorTargetId.h  InspectorTargetIdHelpers.h  PropertyWidgetRegistry.h  ReflectedComponentAutoRegistration.h  ReflectedDiffUtil.h  ReflectedObjectSerialization.h  ReflectedObjectSnapshot.h  ReflectedPropertyAccess.h  ReflectedPropertyDrawer.h  ReflectedSceneResolver.h  ReflectedTransactionSystem.h  RootObjectSnapshotUtils.h  SceneDocument.h  SceneEntitySnapshot.h  SceneEntityTransactionDomain.h  SceneSerializer.h  SceneTransactionResolver.h  TransactionDiffUtil.h  TransactionDomain.h  TransactionHistory.h  TransactionObjectRef.h  TransactionObjectRefHelpers.h  (+3 more)
Engine/Source/Editor/src/: AssetBrowserPanel.cpp  AssetDatabase.cpp  ComponentEditorRegistration.cpp  ComponentEditors.cpp  ComponentInspectorRegistry.cpp  ComponentTypeRegistration.cpp  ComponentTypeRegistry.cpp  DiffUtil.cpp  EditableObjectRegistrations.cpp  EditableObjectTraits.cpp  EditableTargetResolver.cpp  EditorAssetResolver.cpp  EditorLayer.cpp  EditorProperty.cpp  EditorTransactionContext.cpp  EditorTransactionSubscriber.cpp  EditorValue.cpp  InspectorDrawContext.cpp  InspectorTargetId.cpp  InspectorTargetIdHelpers.cpp  PropertyWidgetRegistry.cpp  ReflectedDiffUtil.cpp  ReflectedObjectSerialization.cpp  ReflectedPropertyAccess.cpp  ReflectedPropertyDrawer.cpp  ReflectedSceneResolver.cpp  ReflectedTransactionSystem.cpp  RootObjectSnapshotUtils.cpp  SceneEntityTransactionDomain.cpp  SceneSerializer.cpp  SceneTransactionResolver.cpp  TransactionDiffUtil.cpp  TransactionHistory.cpp  TransactionSystem.cpp  TransformGizmo.cpp
Engine/Source/Reflection/include/: PropertyValue.h  PropertyValueUtils.h  ReflectedPropertyRef.h  ReflectionMacros.h  ReflectionTraversal.h  ReflectionTypes.h  ReflectionUtils.h
Engine/Source/Reflection/src/: ReflectionUtils.cpp
Engine/Source/Runtime/Core/include/: Assertions.h  Log.h  NyxEngineAPI.h  Paths.h
Engine/Source/Runtime/Core/src/: Assertions.cpp  Core.cpp  Log.cpp  NyxPCH.cpp  NyxPCH.h  Paths.cpp
Engine/Source/Runtime/Engine/include/: BinaryArchive.h  CameraComponent.h  DirectionalLightComponent.h  Entity.h  EntryPoint.h  IAssetResolver.h  Image.h  MeshRendererComponent.h  NameComponent.h  ReflectedArchiveSerializer.h  ResourceManager.h  SceneComponentRegistration.h  SceneComponentTypeRegistry.h  SceneDocument.h  SceneSerializationTypes.h  TransformComponent.h  TypedHandle.h  Window.h  WindowsWindow.h
Engine/Source/Runtime/Engine/src/: Application.cpp  BinaryArchive.cpp  CameraComponent.cpp  DirectionalLightComponent.cpp  Entity.cpp  Image.cpp  MeshRendererComponent.cpp  NameComponent.cpp  ReflectedArchiveSerializer.cpp  ResourceManager.cpp  SceneComponentRegistration.cpp  SceneComponentTypeRegistry.cpp  SceneDocument.cpp  TransformComponent.cpp  TypedHandle.cpp  WindowsWindow.cpp
Engine/Source/Runtime/Renderer/include/: CubemapTexture.h  EditorCamera.h  Extent2D.h  GltfImporter.h  ImGuiTheme.h  ImGuiVulkanUtil.h  Material.h  Mesh.h  OffscreenRenderTarget.h  Renderer.h  SceneView.h  SceneViewCameraData.h  SceneViewTypes.h  Shader.h  Texture.h  VulkanContext.h  VulkanImGuiBackend.h  VulkanRenderer.h  VulkanSwapchain.h  VulkanUtil.h  VulkanViewportTarget.h
Engine/Source/Runtime/Renderer/src/: CubemapTexture.cpp  EditorCamera.cpp  Extent2D.cpp  GltfImporter.cpp  ImGuiTheme.cpp  ImGuiVulkanUtil.cpp  Material.cpp  Mesh.cpp  OffscreenRenderTarget.cpp  Renderer.cpp  SceneView.cpp  SceneViewCameraData.cpp  SceneViewTypes.cpp  Shader.cpp  Texture.cpp  VulkanContext.cpp  VulkanImGuiBackend.cpp  VulkanRenderer.cpp  VulkanUtil.cpp  (+2 more)
Engine/include/: Application.h  Assertions.h  Core.h  Engine.h  Entity.h  EntryPoint.h  ImGuiTheme.h  ImGuiVulkanUtil.h  Log.h  Mesh.h  ResourceManager.h  Shader.h  Texture.h  VulkanUtil.h  Window.h  WindowsWindow.h
Engine/src/: Application.cpp  Assertions.cpp  Core.cpp  Enginepch.h  Entity.cpp  ImGuiTheme.cpp  ImGuiVulkanUtil.cpp  Log.cpp  Mesh.cpp  ResourceManager.cpp  Shader.cpp  Texture.cpp  TypedHandle.cpp  VulkanUtil.cpp  WindowsWindow.cpp
NyxCore/: CMakeLists.txt
NyxCore/include/: Assertions.h  Log.h  NyxCoreAPI.h
NyxCore/src/: Assertions.cpp  Core.cpp  Log.cpp  NyxCorePCH.cpp
NyxEditor/: CMakeLists.txt
NyxEngine/: CMakeLists.txt
NyxEngine/include/: Application.h  EntryPoint.h  ImGuiTheme.h  ImGuiVulkanUtil.h  NyxEngineAPI.h  ResourceManager.h  VulkanUtil.h  WindowsWindow.h
NyxEngine/src/: Application.cpp  Entity.cpp  ImGuiTheme.cpp  ImGuiVulkanUtil.cpp  NyxEnginePCH.cpp  ResourceManager.cpp  TypedHandle.cpp  VulkanUtil.cpp  WindowsWindow.cpp
NyxRenderer/: CMakeLists.txt
NyxRenderer/include/: NyxRendererAPI.h  Renderer.h  Texture.h
NyxRenderer/src/: Mesh.cpp  NyxRendererPCH.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
Sandbox/: CMakeLists.txt  main.cpp
Tools/NyxHeaderTool/: CMakeLists.txt
Tools/NyxHeaderTool/src/: CodeGenerator.cpp  CodeGenerator.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  ReflectedTypeIndex.h  ReflectionAst.h  ReflectionSemantics.cpp  ReflectionSemantics.h  SpecifierRegistry.cpp  SpecifierRegistry.h  Token.h  main.cpp  main_regex.cpp
Tools/NyxHeaderTool/tests/: CMakeLists.txt  RegenerateGoldenFiles.bat  RunHeaderToolTests.bat  TestDriver.cpp
(+19 files in other folders)
